force-app/main/default/objects/Time_Tracker_Task__c/Time_Tracker_Task__c.object-meta.xml
<CustomObject>
    <label>Time Tracker Task</label>
    <nameField>
        <label>Time Tracker Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Tracker Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>