force-app/main/default/objects/Time_Tracker_Task__c/fields/Billable_by_default__c.field-meta.xml
<CustomField>
    <fullName>Billable_by_default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in determining whether default tasks should be marked billable when creating a new project.</description>
    <inlineHelpText>Used in determining whether default tasks should be marked billable when creating a new project.</inlineHelpText>
    <label>Billable by default</label>
    <type>Checkbox</type>
</CustomField>