force-app/main/default/objects/Time_Tracker_Task__c/fields/Default_hourly_rate__c.field-meta.xml
<CustomField>
    <fullName>Default_hourly_rate__c</fullName>
    <description>The hourly rate to use for this task when it is added to a project.</description>
    <inlineHelpText>The hourly rate to use for this task when it is added to a project.</inlineHelpText>
    <label>Default hourly rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>