force-app/main/default/objects/Time_Tracker_Task__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this task should be automatically added to future projects.</description>
    <inlineHelpText>Whether this task should be automatically added to future projects.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>