force-app/main/default/objects/Time_Tracker_Task__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <description>Name of the task</description>
    <inlineHelpText>Name of the task</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>